# esif-client-server

./: README.md  user-manual.html
RajshahiCopy/: autorun.bat  autorun.inf
benchmark/: Makefile  client.c  defines.h  errors.h  gendirs.sh  goodclient  goodclient.c  includes.h  myfuncs.c  myfuncs.h
passmgmt/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  passmgmt.glade.bak  passmgmt.gladep
project2/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  project2.glade  project2.glade.bak  project2.gladep.bak
project2/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  college copy.txt  college.txt  defines.h  editor.c  editor.h  educlient.c  educlient.h  errors.h  gensubcode  gensubcode.c  includes.h  interface.c  interface.c.bak  interface.h  liststore.c  liststore.h  log.txt  main.c  myfuncs.c  myfuncs.h  project2  splash.c  sub_4th_arts.txt  sub_4th_home_eco.txt  sub_4th_music.txt  sub_4th_sc.txt  sub_arts.txt  sub_common_com.txt  sub_common_is_st.txt  sub_music.txt  support.h  test.c  website-localhost.txt  website.txt  widget_to_name.txt
project2/src/.deps/: callbacks.Po  editor.Po  interface.Po  main.Po  myfuncs.Po  splash.Po  support.Po
project2/src/kolors/: Makefile
project2/src/kolors/gtk-2.0/: Makefile
project2/src/theme/: Makefile.in
server/: Makefile  build.sh  delpass  delpass.c  dispass  dispass.c  eduserver  eduserver.c  eduserver.h  enapass  enapass.c  genpass  genpass.c  getpass.c  inspass  inspass.c  makefile.head  makefile.inc  makefile.tail  pass.txt  (+18 more)
(+224 files in other folders)
